--- a/src/WASM/_Imports.razor
+++ b/src/WASM/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using WASM
+@using WASM.Components
 @using WASM.Shared
