Updated User model.

--- a/src/WASM/Components/Hero.razor
+++ b/src/WASM/Components/Hero.razor
@@ -5,7 +5,7 @@
     </div>
     <div class="content">
         <div class="image_wrap">
-            <div class="main" data-img-url="Arlo/img/about/1.jpg"></div>
+            <div class="main" data-img-url="Arlo/img/about/avatar.jpg"></div>
         </div>
         <div class="name_holder">
             <h3>Albert <span>Walkers</span></h3>
