--- a/src/WASM/wwwroot/Arlo/css/style.css
+++ b/src/WASM/wwwroot/Arlo/css/style.css
@@ -1556,7 +1556,7 @@ body.modal{
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	background-image: url("..//img/slider/1.jpg");
+	background-image: url("..//img/about/ocean_background.jpg");
 }
 .arlo_tm_hero .ripple:before{
 	position: absolute;
