--- a/src/WASM/_Imports.razor
+++ b/src/WASM/_Imports.razor
@@ -6,8 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using MudBlazor
 @using WASM
-@using WASM.Components
 @using WASM.Shared
 @using WASM.Interfaces
 @using WASM.Static
