--- a/src/WASM/Shared/AppBar.razor
+++ b/src/WASM/Shared/AppBar.razor
@@ -5,16 +5,12 @@
     <MudIconButton Icon="@Icons.Custom.Brands.LinkedIn" Color="Color.Inherit" />
     <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" />
 </MudAppBar>
-<MudDrawer ClipMode="@DrawerClipMode.Always" @bind-Open="@_drawerOpen">
-    <MudDrawerHeader>
-        <MudText Typo="Typo.h6">Huy NG</MudText>
-    </MudDrawerHeader>
-    <NavMenu />
-</MudDrawer>
+
+<Drawer DrawerOpen="_drawerOpen" />
 
 @code
 {
-    bool _drawerOpen = false;
+    private bool _drawerOpen = false;
 
     void DrawerToggle()
     {
