--- a/src/WASM/Pages/Index.razor
+++ b/src/WASM/Pages/Index.razor
@@ -1,5 +1,21 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<MudGrid>
+    <Home />
 
-Welcome to your new app.
+    <About />
+
+    <Skills />
+
+    <Services />
+
+    <Portfolio />
+
+    <Testimonials />
+
+    <Archievements />
+
+    <Posts />
+
+    <Contact />
+</MudGrid>
