--- a/src/WASM/Shared/Drawer.razor
+++ b/src/WASM/Shared/Drawer.razor
@@ -1,7 +1,4 @@
-﻿<MudDrawer ClipMode="@DrawerClipMode.Always" @bind-Open="@DrawerOpen">
-    <MudDrawerHeader>
-        <MudText Typo="Typo.h6">Huy NG</MudText>
-    </MudDrawerHeader>
+﻿<MudDrawer ClipMode="@DrawerClipMode.Always" @bind-Open="@DrawerOpen" Elevation="2" Variant="@DrawerVariant.Mini" OpenMiniOnHover="true">
     <NavMenu />
 </MudDrawer>
 
