--- a/src/WASM/_Imports.razor
+++ b/src/WASM/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using WASM
+@using WASM.Components
 @using WASM.Shared
 @using WASM.Interfaces
 @using WASM.Static
