Added anchor navigation.

--- a/src/WASM/Components/Archievements.razor
+++ b/src/WASM/Components/Archievements.razor
@@ -1,4 +1,4 @@
-﻿<MudItem md="3" sm="12" xs="12">
+﻿<MudItem md="3" sm="12" xs="12" id="archievements">
     <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
 </MudItem>
 <MudItem md="3" sm="12" xs="12">
