--- a/src/WASM/Components/Posts.razor
+++ b/src/WASM/Components/Posts.razor
@@ -1,4 +1,4 @@
-﻿<MudItem xs="12">
+﻿<MudItem xs="12" id="posts">
     <MudPaper Class="mt-5" Elevation="3" Height="50px"></MudPaper>
 </MudItem>
 <MudItem xs="12">
