--- a/src/WASM/Components/About.razor
+++ b/src/WASM/Components/About.razor
@@ -1,4 +1,4 @@
-﻿<MudItem xs="12">
+﻿<MudItem xs="12" id="about">
     <MudPaper Class="mt-5" Elevation="3" Height="50px"></MudPaper>
 </MudItem>
 <MudItem md="4" sm="12" xs="12">
