--- a/src/WASM/Components/Portfolio.razor
+++ b/src/WASM/Components/Portfolio.razor
@@ -1,4 +1,4 @@
-﻿<MudItem xs="12">
+﻿<MudItem xs="12" id="portfolio">
     <MudPaper Class="mt-5" Elevation="3" Height="50px"></MudPaper>
 </MudItem>
 <MudItem md="4" sm="6" xs="12">
