--- a/src/WASM/Shared/NavMenu.razor
+++ b/src/WASM/Shared/NavMenu.razor
@@ -1,10 +1,10 @@
 ﻿<MudNavMenu>
-    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Home" Href="/">Home</MudNavLink>
-    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Person" Href="/about">About</MudNavLink>
-    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Diamond" Href="/about">Skills</MudNavLink>
-    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Layers" Href="/service">Services</MudNavLink>
-    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Collections" Href="/image">Images</MudNavLink>
-    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.WorkspacePremium" Href="/archievements">Archievements</MudNavLink>
-    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Newspaper" Href="/post">Posts</MudNavLink>
-    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Contacts" Href="/contact">Contact</MudNavLink>
+    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Home" Href="#home">Home</MudNavLink>
+    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Person" Href="#about">About</MudNavLink>
+    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Diamond" Href="#skills">Skills</MudNavLink>
+    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Layers" Href="#services">Services</MudNavLink>
+    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Collections" Href="#portfolio">Portfolio</MudNavLink>
+    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.WorkspacePremium" Href="#archievements">Archievements</MudNavLink>
+    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Newspaper" Href="#posts">Posts</MudNavLink>
+    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Filled.Contacts" Href="#contact">Contact</MudNavLink>
 </MudNavMenu>
