--- a/src/WASM/Components/Home.razor
+++ b/src/WASM/Components/Home.razor
@@ -1,7 +1,12 @@
 ﻿<MudItem xs="12" id="home">
-    <MudPaper Class="mt-5 d-flex justify-center" Elevation="3" Height="850px" Style="background-image: url('./asset/img/full_stack.jpg'); background-size: 100% 100%;">
-        <MudImage Fluid="true" ObjectFit="ObjectFit.Cover" Src="./asset/img/avatar.png" Height="250" Width="250" Class="rounded-circle align-self-center"/>
+    <MudPaper Class="mt-5 d-flex justify-center rounded-xl" Elevation="3" Height="850px" Style="background-image: url('./asset/img/full_stack.jpg'); background-size: 100% 100%;">
+        <div class="align-self-center">
+            <div class="d-block d-flex justify-center">
+                <MudImage Fluid="true" ObjectFit="ObjectFit.Cover" Src="./asset/img/avatar.png" Height="250" Width="250" Class="rounded-circle" />
+            </div>
+            <MudChip Color="Color.Secondary" Class="d-block mt-4" Style="height: 60px">
+                <MudText Typo="Typo.h4" Align="Align.Center">Hi! My name is Huy and I am a DotNet developer.</MudText>
+            </MudChip>
+        </div>
     </MudPaper>
-
-    @*<MudImage Fluid="true" ObjectFit="ObjectFit.Cover" ObjectPosition="ObjectPosition.Center" Src="./asset/img/ocean_background.jpg" Height="500" Class="rounded-lg mt-5" Elevation="3"/>*@
 </MudItem>
