--- a/src/WASM/Pages/Index.razor
+++ b/src/WASM/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<MudGrid>
+@*<MudGrid>
     <Home />
 
     <About />
@@ -20,4 +20,10 @@
     <Contact />
 
     <AnchorNavigation />
-</MudGrid>
+</MudGrid>*@
+
+<Home />
+
+<About />
+
+<AnchorNavigation />
