--- a/src/WASM/Components/About.razor
+++ b/src/WASM/Components/About.razor
@@ -1,9 +1,70 @@
-﻿<MudItem xs="12" id="about">
-    <MudPaper Class="mt-5" Elevation="3" Height="50px"></MudPaper>
-</MudItem>
-<MudItem md="4" sm="12" xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
-<MudItem md="8" sm="12" xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
+﻿<MudGrid id="about">
+    <MudItem xs="12" Class="mt-5">
+        <MudText Typo="Typo.h3" Color="Color.Secondary" Style="margin-left:50px">ABOUT ME</MudText>
+    </MudItem>
+    <MudItem md="4" sm="12" xs="12" Style="height:500px" Class="mt-5 d-flex justify-center">
+        <MudImage Fluid="true" Src="./asset/img/dotnet-bot.png" />
+    </MudItem>
+    <MudItem md="8" sm="12" xs="12" Class="mt-5">
+        <MudText Typo="Typo.h5">My name is <span class="mud-primary-text"><strong>Nguyen Gia Huy</strong></span></MudText>
+        <MudText Typo="Typo.body1" Class="mt-3">
+            I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration to concept and execution, but I find the most satisfaction in seeing the finished product do everything for you that it was created to do.
+        </MudText>
+        <MudGrid Class="mt-7">
+            <MudItem md="6" sm="12" xs="12">
+                <form>
+                    <div class="row mb-2">
+                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Cake" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Birthday:</strong></MudText>
+                        <MudText Class="col-sm-8">26.03.1998</MudText>
+                    </div>
+                    <div class="row mb-2">
+                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.LocationOn" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Location:</strong></MudText>
+                        <MudText Class="col-sm-8">HCM City, VN</MudText>
+                    </div>
+                    <div class="row mb-2">
+                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Business" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Study:</strong></MudText>
+                        <MudText Class="col-sm-8">Greenwich</MudText>
+                    </div>
+                    <div class="row mb-2">
+                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Email" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Email:</strong></MudText>
+                        <MudText Class="col-sm-8">huynguyen260398@gmail.com</MudText>
+                    </div>
+                </form>
+            </MudItem>
+            <MudItem md="6" sm="12" xs="12">
+                <form>
+                    <div class="row mb-2">
+                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.CalendarMonth" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Age:</strong></MudText>
+                        <MudText Class="col-sm-8">24</MudText>
+                    </div>
+                    <div class="row mb-2">
+                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.VideogameAsset" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Interests:</strong></MudText>
+                        <MudText Class="col-sm-8">Musics</MudText>
+                    </div>
+                    <div class="row mb-2">
+                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.School" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Degree:</strong></MudText>
+                        <MudText Class="col-sm-8">Bachelor</MudText>
+                    </div>
+                    <div class="row mb-2">
+                        <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Phone" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
+                        <MudText Class="col-sm-2 mud-secondary-text"><strong>Phone:</strong></MudText>
+                        <MudText Class="col-sm-8">0903.336.493</MudText>
+                    </div>
+                </form>
+            </MudItem>
+        </MudGrid>
+        <MudGrid Class="mt-5">
+            <MudItem xs="12">
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" StartIcon="@Icons.Filled.FileDownload" Class="mr-5">Download CV</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" StartIcon="@Icons.Filled.Send">Send Message</MudButton>
+            </MudItem>
+        </MudGrid>
+    </MudItem>
+</MudGrid>
