Working on Skill section.

--- a/src/WASM/Components/About.razor
+++ b/src/WASM/Components/About.razor
@@ -1,5 +1,5 @@
-﻿<MudGrid id="about">
-    <MudItem xs="12" Class="mt-5">
+﻿<MudGrid id="about" Class="mt-5" Style="border:2px solid red">
+    <MudItem xs="12" Class="px-0 py-0 my-5">
         <MudText Typo="Typo.h3" Color="Color.Secondary" Style="margin-left:50px">ABOUT ME</MudText>
     </MudItem>
     <MudItem md="4" sm="12" xs="12" Style="height:500px" Class="mt-5 d-flex justify-center">
@@ -12,52 +12,48 @@
         </MudText>
         <MudGrid Class="mt-7">
             <MudItem md="6" sm="12" xs="12">
-                <form>
                     <div class="row mb-2">
                         <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Cake" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
                         <MudText Class="col-sm-2 mud-secondary-text"><strong>Birthday:</strong></MudText>
-                        <MudText Class="col-sm-8">26.03.1998</MudText>
+                        <MudText Class="col-sm-8 text-end">26.03.1998</MudText>
                     </div>
                     <div class="row mb-2">
                         <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.LocationOn" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
                         <MudText Class="col-sm-2 mud-secondary-text"><strong>Location:</strong></MudText>
-                        <MudText Class="col-sm-8">HCM City, VN</MudText>
+                        <MudText Class="col-sm-8 text-end">HCM City, VN</MudText>
                     </div>
                     <div class="row mb-2">
                         <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Business" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
                         <MudText Class="col-sm-2 mud-secondary-text"><strong>Study:</strong></MudText>
-                        <MudText Class="col-sm-8">Greenwich</MudText>
+                        <MudText Class="col-sm-8 text-end">Greenwich</MudText>
                     </div>
                     <div class="row mb-2">
                         <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Email" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
                         <MudText Class="col-sm-2 mud-secondary-text"><strong>Email:</strong></MudText>
-                        <MudText Class="col-sm-8">huynguyen260398@gmail.com</MudText>
+                        <MudText Class="col-sm-8 text-end">huynguyen260398@gmail.com</MudText>
                     </div>
-                </form>
             </MudItem>
             <MudItem md="6" sm="12" xs="12">
-                <form>
                     <div class="row mb-2">
                         <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.CalendarMonth" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
                         <MudText Class="col-sm-2 mud-secondary-text"><strong>Age:</strong></MudText>
-                        <MudText Class="col-sm-8">24</MudText>
+                        <MudText Class="col-sm-8 text-end">24</MudText>
                     </div>
                     <div class="row mb-2">
                         <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.VideogameAsset" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
                         <MudText Class="col-sm-2 mud-secondary-text"><strong>Interests:</strong></MudText>
-                        <MudText Class="col-sm-8">Musics</MudText>
+                        <MudText Class="col-sm-8 text-end">Musics</MudText>
                     </div>
                     <div class="row mb-2">
                         <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.School" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
                         <MudText Class="col-sm-2 mud-secondary-text"><strong>Degree:</strong></MudText>
-                        <MudText Class="col-sm-8">Bachelor</MudText>
+                        <MudText Class="col-sm-8 text-end">Bachelor</MudText>
                     </div>
                     <div class="row mb-2">
                         <MudIcon Class="col-sm-2" Color="Color.Secondary" Icon="@Icons.Filled.Phone" Style="width:50px; height:50px; margin-top:-15px; margin-right:-15px" />
                         <MudText Class="col-sm-2 mud-secondary-text"><strong>Phone:</strong></MudText>
-                        <MudText Class="col-sm-8">0903.336.493</MudText>
+                        <MudText Class="col-sm-8 text-end">0903.336.493</MudText>
                     </div>
-                </form>
             </MudItem>
         </MudGrid>
         <MudGrid Class="mt-5">
