--- a/src/WASM/Components/Home.razor
+++ b/src/WASM/Components/Home.razor
@@ -1,5 +1,5 @@
-﻿<MudGrid id="home">
-    <MudItem xs="12" Class="mt-5">
+﻿<MudGrid id="home" Class="mt-a" Style="border:2px solid orange">
+    <MudItem xs="12" Class="px-0 py-0">
         <MudPaper Class="d-flex justify-center rounded-xl" Elevation="3" Height="850px" Style="background-image: url('./asset/img/full_stack.jpg'); background-size: 100% 100%;">
             <div class="align-self-center">
                 <div class="d-block d-flex justify-center">
