--- a/src/WASM/Shared/MainLayout.razor
+++ b/src/WASM/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 <MudLayout>
     <AppBar />
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.ExtraLarge">
+        <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="pa-5" Style="border:2px solid blue">
             @Body
         </MudContainer>
     </MudMainContent>
