Create shared component as section title.

--- a/src/WASM/Components/About.razor
+++ b/src/WASM/Components/About.razor
@@ -1,7 +1,5 @@
 ﻿<MudGrid id="about" Class="mt-5" Style="border:2px solid red">
-    <MudItem xs="12" Class="px-0 py-0 my-5">
-        <MudText Typo="Typo.h3" Color="Color.Secondary" Style="margin-left:50px">ABOUT ME</MudText>
-    </MudItem>
+    <SectionTitle Title="about me" />
     <MudItem md="4" sm="12" xs="12" Style="height:500px" Class="mt-5 d-flex justify-center">
         <MudImage Fluid="true" Src="./asset/img/dotnet-bot.png" />
     </MudItem>
