--- a/src/WASM/Components/Skills.razor
+++ b/src/WASM/Components/Skills.razor
@@ -1,7 +1,5 @@
 ﻿<MudGrid id="skills" Class="mt-5" Style="border:2px solid green">
-    <MudItem xs="12" Class="px-0 py-0 my-5">
-        <MudText Typo="Typo.h3" Color="Color.Secondary" Style="margin-left:50px">MY SKILLS</MudText>
-    </MudItem>
+    <SectionTitle Title="my skills" />
     <MudItem md="6" sm="12" xs="12">
         <div class="row">
             <div class="col-6">
