Working on portfolio section.

--- a/src/WASM/Components/Portfolio.razor
+++ b/src/WASM/Components/Portfolio.razor
@@ -1,21 +1,43 @@
-﻿<MudItem xs="12" id="portfolio">
-    <MudPaper Class="mt-5" Elevation="3" Height="50px"></MudPaper>
-</MudItem>
-<MudItem md="4" sm="6" xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
-<MudItem md="4" sm="6" xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
-<MudItem md="4" sm="6" xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
-<MudItem md="4" sm="6" xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
-<MudItem md="4" sm="6" xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
-<MudItem md="4" sm="6" xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
+﻿<MudGrid id="portfolio" Class="mt-5" Style="border:2px solid deeppink">
+    <SectionTitle Title="work gallery" />
+    <MudItem lg="3" md="4" sm="6" xs="12">
+        <MudTooltip Color="Color.Secondary" Arrow="true" Text="My first project">
+            <MudImage Elevation="5" Fluid="true" Src="./asset/img/creative_castle.jpg" />
+        </MudTooltip>
+    </MudItem>
+    <MudItem lg="3" md="4" sm="6" xs="12">
+        <MudTooltip Color="Color.Secondary" Arrow="true" Text="My first project">
+            <MudImage Elevation="5" Fluid="true" Src="./asset/img/creative_castle.jpg" />
+        </MudTooltip>
+    </MudItem>
+    <MudItem lg="3" md="4" sm="6" xs="12">
+        <MudTooltip Color="Color.Secondary" Arrow="true" Text="My first project">
+            <MudImage Elevation="5" Fluid="true" Src="./asset/img/creative_castle.jpg" />
+        </MudTooltip>
+    </MudItem>
+    <MudItem lg="3" md="4" sm="6" xs="12">
+        <MudTooltip Color="Color.Secondary" Arrow="true" Text="My first project">
+            <MudImage Elevation="5" Fluid="true" Src="./asset/img/creative_castle.jpg" />
+        </MudTooltip>
+    </MudItem>
+    <MudItem lg="3" md="4" sm="6" xs="12">
+        <MudTooltip Color="Color.Secondary" Arrow="true" Text="My first project">
+            <MudImage Elevation="5" Fluid="true" Src="./asset/img/creative_castle.jpg" />
+        </MudTooltip>
+    </MudItem>
+    <MudItem lg="3" md="4" sm="6" xs="12">
+        <MudTooltip Color="Color.Secondary" Arrow="true" Text="My first project">
+            <MudImage Elevation="5" Fluid="true" Src="./asset/img/creative_castle.jpg" />
+        </MudTooltip>
+    </MudItem>
+    <MudItem lg="3" md="4" sm="6" xs="12">
+        <MudTooltip Color="Color.Secondary" Arrow="true" Text="My first project">
+            <MudImage Elevation="5" Fluid="true" Src="./asset/img/creative_castle.jpg" />
+        </MudTooltip>
+    </MudItem>
+    <MudItem lg="3" md="4" sm="6" xs="12">
+        <MudTooltip Color="Color.Secondary" Arrow="true" Text="My first project">
+            <MudImage Elevation="5" Fluid="true" Src="./asset/img/creative_castle.jpg" />
+        </MudTooltip>
+    </MudItem>
+</MudGrid>
