Working on archievement section.

--- a/src/WASM/Components/Archievements.razor
+++ b/src/WASM/Components/Archievements.razor
@@ -1,12 +1,38 @@
-﻿<MudItem md="3" sm="12" xs="12" id="archievements">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
-<MudItem md="3" sm="12" xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
-<MudItem md="3" sm="12" xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
-<MudItem md="3" sm="12" xs="12">
-    <MudPaper Class="mt-5" Elevation="3" Height="300px"></MudPaper>
-</MudItem>
+﻿<MudGrid Class="mt-5" Style="border:2px solid red">
+    <MudItem md="3" sm="6" xs="12">
+        <MudPaper Class="d-flex justify-center align-center" Elevation="5" Height="200px">
+            <div>
+                <MudText Typo="Typo.h4" Class="d-block text-center"><strong>111</strong></MudText>
+                <MudDivider DividerType="DividerType.Middle" Class="my-4" Light="true"/>
+                <MudText Typo="Typo.h5" Class="d-block text-center">Happy Clients</MudText>
+            </div>
+        </MudPaper>
+    </MudItem>
+    <MudItem md="3" sm="6" xs="12">
+        <MudPaper Class="d-flex justify-center align-center" Elevation="5" Height="200px">
+            <div>
+                <MudText Typo="Typo.h4" Class="d-block text-center"><strong>333</strong></MudText>
+                <MudDivider DividerType="DividerType.Middle" Class="my-4" Light="true"/>
+                <MudText Typo="Typo.h5" Class="d-block text-center">Projects Finished</MudText>
+            </div>
+        </MudPaper>
+    </MudItem>
+    <MudItem md="3" sm="6" xs="12">
+        <MudPaper Class="d-flex justify-center align-center" Elevation="5" Height="200px">
+            <div>
+                <MudText Typo="Typo.h4" Class="d-block text-center"><strong>555</strong></MudText>
+                <MudDivider DividerType="DividerType.Middle" Class="my-4" Light="true"/>
+                <MudText Typo="Typo.h5" Class="d-block text-center">Certificates Archieved</MudText>
+            </div>
+        </MudPaper>
+    </MudItem>
+    <MudItem md="3" sm="6" xs="12">
+        <MudPaper Class="d-flex justify-center align-center" Elevation="5" Height="200px">
+            <div>
+                <MudText Typo="Typo.h4" Class="d-block text-center"><strong>777</strong></MudText>
+                <MudDivider DividerType="DividerType.Middle" Class="my-4" Light="true"/>
+                <MudText Typo="Typo.h5" Class="d-block text-center">Awards Won</MudText>
+            </div>
+        </MudPaper>
+    </MudItem>
+</MudGrid>
