Working on post section.

--- a/src/WASM/Components/Posts.razor
+++ b/src/WASM/Components/Posts.razor
@@ -1,22 +1,55 @@
-﻿<MudItem xs="12" id="posts">
-    <MudPaper Class="mt-5" Elevation="3" Height="50px"></MudPaper>
-</MudItem>
-<MudItem xs="12">
-    <MudGrid Justify="Justify.Center">
-        <MudItem md="4" sm="12" xs="12">
-            <MudItem Class="d-flex flex-column align-center mt-5">
-                <MudPaper Elevation="3" Height="400px" Width="300px"></MudPaper>
-            </MudItem>
-        </MudItem>
-        <MudItem md="4" sm="12" xs="12">
-            <MudItem Class="d-flex flex-column align-center mt-5">
-                <MudPaper Elevation="3" Height="400px" Width="300px"></MudPaper>
-            </MudItem>
-        </MudItem>
-        <MudItem md="4" sm="12" xs="12">
-            <MudItem Class="d-flex flex-column align-center mt-5">
-                <MudPaper Elevation="3" Height="400px" Width="300px"></MudPaper>
-            </MudItem>
-        </MudItem>
-    </MudGrid>
-</MudItem>
+﻿<MudGrid id="posts" Class="mt-5" Style="border:2px solid green">
+    <SectionTitle Title="latest posts" />
+    <MudItem lg="3" md="4" sm="6" xs="12" Class="d-flex justify-center">
+        <MudCard Style="width: 400px">
+            <MudCardMedia Image="./asset/img/post.jpg" Height="250" />
+            <MudCardContent>
+                <MudText Typo="Typo.h5"><strong>Old Paint</strong></MudText>
+                <MudText Typo="Typo.subtitle1" Class="mb-5">January 22, 2018</MudText>
+                <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia. This photo was taken in a small village in Istra Croatia.</MudText>
+            </MudCardContent>
+            <MudCardActions>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" Style="width:150px">Read More</MudButton>
+            </MudCardActions>
+        </MudCard>
+    </MudItem>
+    <MudItem lg="3" md="4" sm="6" xs="12" Class="d-flex justify-center">
+        <MudCard Style="width: 400px">
+            <MudCardMedia Image="./asset/img/post.jpg" Height="250" />
+            <MudCardContent>
+                <MudText Typo="Typo.h5"><strong>Old Paint</strong></MudText>
+                <MudText Typo="Typo.subtitle1" Class="mb-5">January 22, 2018</MudText>
+                <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia. This photo was taken in a small village in Istra Croatia.</MudText>
+            </MudCardContent>
+            <MudCardActions>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" Style="width:150px">Read More</MudButton>
+            </MudCardActions>
+        </MudCard>
+    </MudItem>
+    <MudItem lg="3" md="4" sm="6" xs="12" Class="d-flex justify-center">
+        <MudCard Style="width: 400px">
+            <MudCardMedia Image="./asset/img/post.jpg" Height="250" />
+            <MudCardContent>
+                <MudText Typo="Typo.h5"><strong>Old Paint</strong></MudText>
+                <MudText Typo="Typo.subtitle1" Class="mb-5">January 22, 2018</MudText>
+                <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia. This photo was taken in a small village in Istra Croatia.</MudText>
+            </MudCardContent>
+            <MudCardActions>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" Style="width:150px">Read More</MudButton>
+            </MudCardActions>
+        </MudCard>
+    </MudItem>
+    <MudItem lg="3" md="4" sm="6" xs="12" Class="d-flex justify-center">
+        <MudCard Style="width: 400px">
+            <MudCardMedia Image="./asset/img/post.jpg" Height="250" />
+            <MudCardContent>
+                <MudText Typo="Typo.h5"><strong>Old Paint</strong></MudText>
+                <MudText Typo="Typo.subtitle1" Class="mb-5">January 22, 2018</MudText>
+                <MudText Typo="Typo.body2">This photo was taken in a small village in Istra Croatia. This photo was taken in a small village in Istra Croatia.</MudText>
+            </MudCardContent>
+            <MudCardActions>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large" Style="width:150px">Read More</MudButton>
+            </MudCardActions>
+        </MudCard>
+    </MudItem>
+</MudGrid>
